@@ -1143,3 +1143,7 @@ TD.tableRowSelected, TH.tableRowSelected {
 BODY.docs DIV.infoBoxTitle {
   line-height: 13px;
 }
+
+.has_long_plugin_output {
+  color: #B94413;
+}
