@@ -16,6 +16,8 @@ next:
             - support show_long_plugin_output inline
           - reports
             - use temp files for large reports
+          - Bug Fixes
+            - make text selections in status page easier
 
 1.64-2   Sat Feb 23 17:14:11 CET 2013
           - config tool
